cmake_minimum_required(VERSION 3.19)
project(ACMP)

set(CMAKE_CXX_STANDARD 17)

add_executable(lev main.cpp)
add_executable(sls sls.cpp)
add_executable(475 475.cpp)
add_executable(597 1138.cpp)
add_executable(818 1141.cpp)
add_executable(381 381.cpp)
add_executable(121 121.cpp)
add_executable(798 798.cpp)
add_executable(work work.cpp)
add_executable(helpclass helpclass.cpp)
add_executable(myclass myclass.cpp)
add_executable(Twodshape Twodshape.cpp)
add_executable(vechicle vechicle.cpp)
add_executable(941 941.cpp)
add_executable(516 516.cpp)
add_executable(678 678.cpp)
add_executable(35 35.cpp)
add_executable(7 7.cpp)
add_executable(686 686.cpp)
add_executable(1142 1142.cpp)
add_executable(aplusb aplusb.cpp)
add_executable(Memory_troubles "Memory troubles.cpp")
add_executable(Interesting_schedule Interesting_schedule.cpp)
add_executable(task_g cmake-build-debug/task_g.cpp)
add_executable(task_b task_b.cpp)
add_executable(1147 1147.cpp)
add_executable(331 331.cpp)
add_executable(520 520.cpp)
add_executable(943 943.cpp)
add_executable(715 715.cpp)
add_executable(637 637.cpp)
add_executable(17 17.cpp)
add_executable(145 145.cpp)
add_executable(problem_A problem_A.cpp)
add_executable(problem_B problem_B.cpp)
add_executable(25 25.cpp)
add_executable(problem_C problem_C.cpp)
add_executable(Max_FAN MAX_FAN.cpp)
add_executable(Get_a_unit Get_a_unit.cpp)
add_executable(131 131.cpp)
add_executable(751 751.cpp)
add_executable(929 929.cpp)
add_executable(problem_A2 problem_A2.cpp)
add_executable(951 651.cpp)
add_executable(499 499.cpp)
add_executable(354 354.cpp)
add_executable(794 794.cpp)
add_executable(757 757.cpp)
add_executable(893 893.cpp)
add_executable(383 383.cpp)
add_executable(51 51.cpp)
add_executable(005 005.cpp)
add_executable(1144 1144.cpp)
add_executable(0086 0086.cpp)
add_executable(286 286.cpp)
add_executable(524 144.cpp)
add_executable(Missing_Letters "Missing_Letters.cpp")
add_executable(Julia_and_Flower_Beds "Julia_and_Flower_Beds .cpp")
add_executable(80 80.cpp)
add_executable(694 694.cpp)
add_executable(284 284.cpp)
add_executable(29 29.cpp)
add_executable(850 850.cpp)
add_executable(125 125.cpp)
add_executable(923 923.cpp)
add_executable(62 62.cpp)
add_executable(297 297.cpp)
add_executable(905 905.cpp)
add_executable(787 787.cpp)
add_executable(236 236.cpp)
add_executable(327 327.cpp)
add_executable(22 22.cpp)
add_executable(935 935.cpp)
add_executable(691 691.cpp)
add_executable(894 894.cpp)
add_executable(925 925.cpp)
add_executable(817 817.cpp)
add_executable(264 264.cpp)
add_executable(952 952.cpp)
add_executable(895 895.cpp)
add_executable(56 56.cpp)
add_executable(13 13.cpp)
